src/objects/Contact.object
<CustomObject>
    <fields>
        <fullName>Training_Completed__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Training Completed</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Training_Completion_Date__c</fullName>
        <label>Training Completion Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Training_Courses__c</fullName>
        <label>Training Courses</label>
        <picklist>
            <picklistValues>
                <fullName>AppDynamics 3.3 Technology Fundamentals</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>AppDynamics 3.3 Techniques to Monitor your application</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>AppDynamics 3.3 Strategies to Troubleshoot Performance Issues</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>AppDynamics 3.3 Analysis, Automation, and Administration</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>AppDynamics 3.4 for Java Enterprise Application Monitoring</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Training_Start_Date__c</fullName>
        <label>Training Start Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Trigger_Contact_18_digit_Workflow__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Field used to trigger wf for updating 18 digit contact id</description>
        <label>Trigger Contact 18 digit Workflow</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Version_Check_First_Visit__c</fullName>
        <label>Version Check First Visit</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Version_Check_Last_Visit__c</fullName>
        <label>Version Check Last Visit</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Version_Check__c</fullName>
        <label>Version Check</label>
        <precision>1</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Withdraw_Reason__c</fullName>
        <label>Status Reason</label>
        <picklist>
            <controllingField>FCRM__FCR_Status__c</controllingField>
            <picklistValues>
                <fullName>Competitor</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>AppDynamics Employee</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Partner Employee</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>SPAMmy data</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Not suitable for AppDynamics sale</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Ops Cleaning</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Existing Competitive Solution Installed</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>No Immediate Need</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>No Longer with Company</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Couldn&apos;t Connect</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Inaccurate Contact Info</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Existing AppD Customer</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Not a Technology Fit</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Opp Won</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Opp Closed</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Already In Active Opp Cycle</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>ZenDesk__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Help Center</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>csnp__Linkedin_ID__c</fullName>
        <label>Linkedin ID</label>
        <length>200</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>csnp__Photo__c</fullName>
        <formula>IMAGE( csnp__Picture_URL__c , &quot;NO IMAGE&quot;)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Photo</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>csnp__Picture_URL__c</fullName>
        <label>Picture URL</label>
        <type>Url</type>
    </fields>
    <fields>
        <fullName>csnp__Summary__c</fullName>
        <label>Summary</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>dll__DL_Active__c</fullName>
        <defaultValue>false</defaultValue>
        <label>DL_Active</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>dll__DL_CompanyId__c</fullName>
        <label>DL CompanyId</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>dll__DL_ContactId__c</fullName>
        <label>DL_ContactId</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>docs_fez__c</fullName>
        <defaultValue>false</defaultValue>
        <label>docs_fez</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>first_meeting_set_by__c</fullName>
        <label>First meeting set by</label>
        <picklist>
            <picklistValues>
                <fullName>Frank Swain</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Garth Adlao</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Joel Fortune</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Lee Weinberg</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Randy Boysen</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Tom Reksten</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Robert Jweinat</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Marc Ownbey</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Mark Majeski</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Joel Brown</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Michael Nelson</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Scott Wilson</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>infer2__Infer_Rating__c</fullName>
        <description>The rating based on the Infer Score. You can modify how these rating buckets are defined by going to Setup | Installed Packages, and click on Configure next to the Infer package.</description>
        <formula>infer2__Infer_Score_ID__r.infer2__Rating__c</formula>
        <inlineHelpText>The rating based on the Infer Score.</inlineHelpText>
        <label>Infer: Rating</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>infer2__Infer_Score_ID__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Infer Score ID</label>
        <referenceTo>infer2__Infer_Entity_Score__c</referenceTo>
        <relationshipLabel>Contacts</relationshipLabel>
        <relationshipName>Contacts</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>infer2__Infer_Score__c</fullName>
        <description>The Infer Score out of 100; the higher the score, the better.</description>
        <formula>infer2__Infer_Score_ID__r.infer2__Score__c</formula>
        <inlineHelpText>The Infer Score out of 100; the higher the score, the better.</inlineHelpText>
        <label>Infer: Score</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>infer_signals__Infer_Smart_Signals_Record__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Infer Smart Signals Record</label>
        <referenceTo>infer_signals__Infer_Smart_Signals_Record__c</referenceTo>
        <relationshipLabel>Contacts</relationshipLabel>
        <relationshipName>Contacts</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>infer_smart_signal_appdynamics_revenue__c</fullName>
        <formula>infer_signals__Infer_Smart_Signals_Record__r.infer_signals__Field_31__c</formula>
        <label>Infer: Revenue (for AppDynamics)</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>is_CIO__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Persona field to determine whether a Contact is a CIO</description>
        <label>is CIO?</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>is_Mobile__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Persona field to determine whether a contact is mobile-related for marketing purposes</description>
        <label>is Mobile?</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>jsImpacts__Data_com_Managed__c</fullName>
        <formula>IF( Jigsaw&lt;&gt;&quot;&quot;, 1, 0)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Data.com Managed</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>jsImpacts__Data_com_does_not_auto_update__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Prevents automated Clean jobs from auto-filling fields with the matched Data.com record&apos;s values.</description>
        <inlineHelpText>Exclude this record from automated field updates from Data.com Clean jobs</inlineHelpText>
        <label>Data.com Does Not Auto-Update</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>jsImpacts__Imported_from_Jigsaw__c</fullName>
        <description>Backend calculation field used for reporting</description>
        <formula>IF(OR(CONTAINS(TEXT(LeadSource),&quot;Jigsaw&quot;),CONTAINS(TEXT(LeadSource),&quot;Data.com&quot;)),1,0)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Added from Data.com</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>mkto2__Inferred_City__c</fullName>
        <label>Inferred City</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>mkto2__Inferred_Company__c</fullName>
        <label>Inferred Company</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>mkto2__Inferred_Country__c</fullName>
        <label>Inferred Country</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>mkto2__Inferred_Metropolitan_Area__c</fullName>
        <label>Inferred Metropolitan Area</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>mkto2__Inferred_Phone_Area_Code__c</fullName>
        <label>Inferred Phone Area Code</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>mkto2__Inferred_Postal_Code__c</fullName>
        <label>Inferred Postal Code</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>mkto2__Inferred_State_Region__c</fullName>
        <label>Inferred State Region</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>mkto2__Lead_Score__c</fullName>
        <label>Lead Score</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>mkto2__Original_Referrer__c</fullName>
        <label>Original Referrer</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>mkto2__Original_Search_Engine__c</fullName>
        <label>Original Search Engine</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>mkto2__Original_Search_Phrase__c</fullName>
        <label>Original Search Phrase</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>mkto2__Original_Source_Info__c</fullName>
        <defaultValue>&quot;Contact&quot;</defaultValue>
        <label>Original Source Info</label>
        <length>2000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>mkto2__Original_Source_Type__c</fullName>
        <defaultValue>&quot;salesforce.com&quot;</defaultValue>
        <label>Original Source Type</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>mkto_si__HideDate__c</fullName>
        <label>Hide Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>mkto_si__Last_Interesting_Moment_Date__c</fullName>
        <label>Last Interesting Moment Date</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>mkto_si__Last_Interesting_Moment_Desc__c</fullName>
        <label>Last Interesting Moment Desc</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>mkto_si__Last_Interesting_Moment_Source__c</fullName>
        <label>Last Interesting Moment Source</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>mkto_si__Last_Interesting_Moment_Type__c</fullName>
        <label>Last Interesting Moment Type</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>mkto_si__Last_Interesting_Moment__c</fullName>
        <formula>IF(!ISNULL(mkto_si__Last_Interesting_Moment_Date__c), 
HYPERLINK(&quot;/apex/mkto_si__Contact_Full_List?view=IM&amp;id=&quot; &amp; Id, mkto_si__Last_Interesting_Moment_Type__c &amp; &quot; -- &quot; &amp; mkto_si__Last_Interesting_Moment_Desc__c ), &quot;&quot;)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Last Interesting Moment</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>mkto_si__Priority__c</fullName>
        <label>Priority</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>mkto_si__Relative_Score_Value__c</fullName>
        <label>Relative Score Value</label>
        <precision>4</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>mkto_si__Relative_Score__c</fullName>
        <formula>CASE( MIN(MAX(mkto_si__Relative_Score_Value__c, 0), 3),
    0, IMAGE(&quot;https://app.marketo.com/images/icons/star0.png&quot;,&quot;0&quot;),
    1, IMAGE(&quot;https://app.marketo.com/images/icons/star1.png&quot;,&quot;1&quot;),
    2, IMAGE(&quot;https://app.marketo.com/images/icons/star2.png&quot;,&quot;2&quot;),
    3, IMAGE(&quot;https://app.marketo.com/images/icons/star3.png&quot;,&quot;3&quot;),
    &quot;&quot;)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Relative Score</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>mkto_si__Sales_Insight__c</fullName>
        <formula>HYPERLINK (&quot;/apex/Contact_Full_List?id=&quot; &amp; Id, IMAGE(&quot;https://www.marketo.com/salesforce/images/applicationLink.png&quot;,&quot;Sales Insight&quot;))</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Sales Insight</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>mkto_si__Urgency_Value__c</fullName>
        <label>Urgency Value</label>
        <precision>4</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>mkto_si__Urgency__c</fullName>
        <formula>CASE( MIN(MAX(mkto_si__Urgency_Value__c, 0),3),
    0, IMAGE(&quot;https://app.marketo.com/images/icons/fire0.png&quot;,&quot;0&quot;),
    1, IMAGE(&quot;https://app.marketo.com/images/icons/fire1.png&quot;,&quot;1&quot;),
    2, IMAGE(&quot;https://app.marketo.com/images/icons/fire2.png&quot;,&quot;2&quot;),
    3, IMAGE(&quot;https://app.marketo.com/images/icons/fire3.png&quot;,&quot;3&quot;),
    &quot;&quot;)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Urgency</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>mkto_si__View_in_Marketo__c</fullName>
        <formula>HYPERLINK (&quot;/apex/mkto_si__Marketo_Lead_Detail?objType=Contact&amp;objId=&quot; &amp; Id, IMAGE($Label.mkto_si__Marketo_Logo_16,$Label.mkto_si__View_In_Marketo))</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>View in Marketo</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>rh2__Currency_Test__c</fullName>
        <label>Currency Test</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>rh2__Describe__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Describe</label>
        <referenceTo>rh2__PS_Describe__c</referenceTo>
        <relationshipLabel>Contacts</relationshipLabel>
        <relationshipName>Contacts</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>rh2__Formula_Test__c</fullName>
        <formula>rh2__Currency_Test__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Formula Test</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>rh2__Integer_Test__c</fullName>
        <label>Integer Test</label>
        <precision>3</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <listViews>
        <fullName>ACT_Contacts</fullName>
        <columns>FULL_NAME</columns>
        <columns>ACCOUNT.NAME</columns>
        <columns>CONTACT.TITLE</columns>
        <columns>CONTACT.PHONE1</columns>
        <columns>CONTACT.EMAIL</columns>
        <columns>CORE.USERS.ALIAS</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>CONTACT.ADDRESS2_STATE</field>
            <operation>contains</operation>
            <value>ACT,Canberra</value>
        </filters>
        <label>ACT Contacts</label>
        <language>en_US</language>
        <sharedTo>
            <allInternalUsers></allInternalUsers>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>ANZ_Customers</fullName>
        <columns>FULL_NAME</columns>
        <columns>ACCOUNT.NAME</columns>
        <columns>CONTACT.TITLE</columns>
        <columns>CONTACT.PHONE1</columns>
        <columns>CONTACT.EMAIL</columns>
        <columns>CORE.USERS.ALIAS</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>CORE.USERS.ALIAS</field>
            <operation>contains</operation>
            <value>pbrow,abroc,mmaso,jrich</value>
        </filters>
        <filters>
            <field>CONTACT.RECORDTYPE</field>
            <operation>equals</operation>
            <value>Contact.Contacts</value>
        </filters>
        <label>ANZ Customers</label>
        <sharedTo>
            <allInternalUsers></allInternalUsers>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>APAC_Customers2</fullName>
        <columns>FULL_NAME</columns>
        <columns>ACCOUNT.NAME</columns>
        <columns>CONTACT.TITLE</columns>
        <columns>CONTACT.PHONE1</columns>
        <columns>CONTACT.EMAIL</columns>
        <columns>CORE.USERS.ALIAS</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>CORE.USERS.ALIAS</field>
            <operation>contains</operation>
            <value>jxu,rgal,lchia,jjaal</value>
        </filters>
        <filters>
            <field>CONTACT.RECORDTYPE</field>
            <operation>equals</operation>
            <value>Contact.Contacts</value>
        </filters>
        <label>APAC Customers</label>
        <language>en_US</language>
        <sharedTo>
            <allInternalUsers></allInternalUsers>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>Active_Customers</fullName>
        <columns>FULL_NAME</columns>
        <columns>ACCOUNT.NAME</columns>
        <columns>CONTACT.TITLE</columns>
        <columns>CONTACT.PHONE1</columns>
        <columns>CONTACT.EMAIL</columns>
        <columns>CORE.USERS.ALIAS</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>CORE.USERS.LAST_NAME</field>
            <operation>equals</operation>
            <value>weidner,davita</value>
        </filters>
        <filters>
            <field>Download__c</field>
            <operation>equals</operation>
            <value>1</value>
        </filters>
        <filters>
            <field>Contact_Status__c</field>
            <operation>equals</operation>
            <value>Customer</value>
        </filters>
        <label>Active Customers - Barret Divita</label>
        <sharedTo>
            <allInternalUsers></allInternalUsers>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>Active_Customers1</fullName>
        <columns>FULL_NAME</columns>
        <columns>ACCOUNT.NAME</columns>
        <columns>CONTACT.TITLE</columns>
        <columns>CONTACT.PHONE1</columns>
        <columns>CONTACT.EMAIL</columns>
        <columns>CORE.USERS.ALIAS</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>CORE.USERS.LAST_NAME</field>
            <operation>equals</operation>
            <value>lassiter,tuttle</value>
        </filters>
        <filters>
            <field>Download__c</field>
            <operation>equals</operation>
            <value>1</value>
        </filters>
        <filters>
            <field>Contact_Status__c</field>
            <operation>equals</operation>
            <value>Customer</value>
        </filters>
        <label>Active Customers</label>
        <sharedTo>
            <allInternalUsers></allInternalUsers>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>All_Members</fullName>
        <columns>FULL_NAME</columns>
        <columns>ACCOUNT.NAME</columns>
        <columns>CONTACT.TITLE</columns>
        <columns>CONTACT.PHONE1</columns>
        <columns>CONTACT.EMAIL</columns>
        <columns>CORE.USERS.ALIAS</columns>
        <filterScope>Mine</filterScope>
        <label>All Members</label>
        <sharedTo>
            <allInternalUsers></allInternalUsers>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>All_Members_All_Contacts</fullName>
        <columns>FULL_NAME</columns>
        <columns>ACCOUNT.NAME</columns>
        <columns>CONTACT.TITLE</columns>
        <columns>CONTACT.PHONE1</columns>
        <columns>CONTACT.EMAIL</columns>
        <columns>CORE.USERS.ALIAS</columns>
        <filterScope>Everything</filterScope>
        <label>All Members (All Contacts)</label>
        <sharedTo>
            <allInternalUsers></allInternalUsers>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>Amber_Active_Customers</fullName>
        <columns>FULL_NAME</columns>
        <columns>ACCOUNT.NAME</columns>
        <columns>CONTACT.TITLE</columns>
        <columns>CONTACT.PHONE1</columns>
        <columns>CONTACT.EMAIL</columns>
        <columns>CORE.USERS.ALIAS</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>CORE.USERS.ALIAS</field>
            <operation>equals</operation>
            <value>pcies,aproc,ddeli</value>
        </filters>
        <filters>
            <field>Download__c</field>
            <operation>equals</operation>
            <value>1</value>
        </filters>
        <filters>
            <field>Contact_Status__c</field>
            <operation>equals</operation>
            <value>Customer</value>
        </filters>
        <label>Amber Active Customers</label>
        <sharedTo>
            <allInternalUsers></allInternalUsers>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>Barret_and_Ryan_Active_Customers</fullName>
        <columns>FULL_NAME</columns>
        <columns>ACCOUNT.NAME</columns>
        <columns>CONTACT.TITLE</columns>
        <columns>CONTACT.PHONE1</columns>
        <columns>CONTACT.EMAIL</columns>
        <columns>CORE.USERS.ALIAS</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>CORE.USERS.LAST_NAME</field>
            <operation>equals</operation>
            <value>weidner,hayburn</value>
        </filters>
        <filters>
            <field>Download__c</field>
            <operation>equals</operation>
            <value>1</value>
        </filters>
        <filters>
            <field>Contact_Status__c</field>
            <operation>equals</operation>
            <value>Customer</value>
        </filters>
        <label>Barret and Ryan Active Customers</label>
        <sharedTo>
            <allInternalUsers></allInternalUsers>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>CELLAMSP</fullName>
        <columns>FULL_NAME</columns>
        <columns>ACCOUNT.NAME</columns>
        <columns>CONTACT.TITLE</columns>
        <columns>CONTACT.PHONE1</columns>
        <columns>CONTACT.EMAIL</columns>
        <columns>CORE.USERS.ALIAS</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>CONTACT.ADDRESS2_STATE</field>
            <operation>equals</operation>
            <value>NE,KS,IA,ND,SD,CO,UT,MO,WA,CA,NM,AZ,OR,ID,IL,NV,TX,OK,AR,MI,MN,IN,OH,KY,LA</value>
        </filters>
        <label>Travis Cella MSP West</label>
        <sharedTo>
            <allInternalUsers></allInternalUsers>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>Flanders</fullName>
        <columns>FULL_NAME</columns>
        <columns>ACCOUNT.NAME</columns>
        <columns>CONTACT.TITLE</columns>
        <columns>CONTACT.PHONE1</columns>
        <columns>CONTACT.EMAIL</columns>
        <columns>CORE.USERS.ALIAS</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>CONTACT.ADDRESS2_STATE</field>
            <operation>equals</operation>
            <value>NE,KS,IA,ND,SD,CO,UT,MO</value>
        </filters>
        <label>Caprio MSP</label>
        <sharedTo>
            <allInternalUsers></allInternalUsers>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>Flanders_Active_Customers</fullName>
        <columns>FULL_NAME</columns>
        <columns>ACCOUNT.NAME</columns>
        <columns>CONTACT.TITLE</columns>
        <columns>CONTACT.PHONE1</columns>
        <columns>CONTACT.EMAIL</columns>
        <columns>CORE.USERS.ALIAS</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>CORE.USERS.LAST_NAME</field>
            <operation>equals</operation>
            <value>flanders,jones,godfrey</value>
        </filters>
        <filters>
            <field>Download__c</field>
            <operation>equals</operation>
            <value>1</value>
        </filters>
        <filters>
            <field>Contact_Status__c</field>
            <operation>equals</operation>
            <value>Customer</value>
        </filters>
        <filters>
            <field>CONTACT.ADDRESS2_STATE</field>
            <operation>equals</operation>
            <value>IL,Illinois</value>
        </filters>
        <label>Flanders Active Customers</label>
        <sharedTo>
            <allInternalUsers></allInternalUsers>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>IBM_Global_Services</fullName>
        <columns>FULL_NAME</columns>
        <columns>ACCOUNT.NAME</columns>
        <columns>CONTACT.TITLE</columns>
        <columns>CONTACT.PHONE1</columns>
        <columns>CONTACT.EMAIL</columns>
        <columns>CORE.USERS.ALIAS</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>ACCOUNT.NAME</field>
            <operation>equals</operation>
            <value>IBM Global Services (U.S.)</value>
        </filters>
        <label>IBM Global Services</label>
        <language>en_US</language>
        <sharedTo>
            <allInternalUsers></allInternalUsers>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>ISR_Open_Contacts</fullName>
        <columns>FULL_NAME</columns>
        <columns>ACCOUNT.NAME</columns>
        <columns>CONTACT.TITLE</columns>
        <columns>CONTACT.LAST_ACTIVITY</columns>
        <columns>CONTACT.PHONE1</columns>
        <columns>CONTACT.EMAIL</columns>
        <columns>CORE.USERS.ALIAS</columns>
        <columns>FCRM__FCR_Status__c</columns>
        <filterScope>Mine</filterScope>
        <filters>
            <field>FCRM__FCR_Status__c</field>
            <operation>equals</operation>
            <value>Open</value>
        </filters>
        <label>ISR - Open Contacts</label>
        <language>en_US</language>
        <sharedTo>
            <allInternalUsers></allInternalUsers>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>Illumina_Contacts</fullName>
        <columns>FULL_NAME</columns>
        <columns>ACCOUNT.NAME</columns>
        <columns>mkto_si__Last_Interesting_Moment_Date__c</columns>
        <columns>mkto_si__Last_Interesting_Moment_Type__c</columns>
        <columns>CONTACT.TITLE</columns>
        <columns>CONTACT.LAST_ACTIVITY</columns>
        <columns>CONTACT.PHONE1</columns>
        <columns>CONTACT.EMAIL</columns>
        <columns>CORE.USERS.ALIAS</columns>
        <filterScope>Mine</filterScope>
        <filters>
            <field>FCRM__FCR_Status__c</field>
            <operation>equals</operation>
            <value>Pending,Open,Attempting Contact,Working,Recycled,Active Opportunity</value>
        </filters>
        <filters>
            <field>ACCOUNT.NAME</field>
            <operation>contains</operation>
            <value>illumina</value>
        </filters>
        <label>Illumina Contacts</label>
        <language>en_US</language>
        <sharedTo>
            <allInternalUsers></allInternalUsers>
        </sharedTo>
    </listViews>
    <recordTypes>
        <fullName>Contacts</fullName>
        <active>true</active>
        <description>Customer and Non-Partner Contact</description>
        <label>Customer Contact</label>
    </recordTypes>
    <recordTypes>
        <fullName>VAR_Partner_Contacts</fullName>
        <active>true</active>
        <description>Business Partner Contact</description>
        <label>Partner Contact</label>
    </recordTypes>
    <sharingModel>Read</sharingModel>
    <validationRules>
        <fullName>Block_Contact_Status_Update_from_Marketo</fullName>
        <active>false</active>
        <errorConditionFormula>AND($User.Id = &apos;005800000068xQd&apos;,ISCHANGED(FCRM__FCR_Status__c ))</errorConditionFormula>
        <errorMessage>Marketo Interface shall not update Contact Status field</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>jsImpacts__Block_autoupdate_from_Data_com</fullName>
        <active>true</active>
        <description>Record-level prevention of automated Clean jobs from automatically updating field values.</description>
        <errorConditionFormula>(  jsImpacts__Data_com_does_not_auto_update__c  ) &amp;&amp; ($User.Alias = &quot;autocln&quot;) &amp;&amp; (ISCHANGED(  Title  ) || ISCHANGED(  Email  ) || ISCHANGED(  Phone  ) || ISCHANGED(  MailingStreet  ) || ISCHANGED(  MailingCity  ) || ISCHANGED(  MailingState  ) || ISCHANGED(  MailingCountry  ) || ISCHANGED(  MailingPostalCode  ) )</errorConditionFormula>
        <errorMessage>This record has been excluded from automated field updates from Data.com Clean jobs.</errorMessage>
    </validationRules>
</CustomObject>